[tool.poetry]
name = "leet-code"
version = "0.1.0"
description = ""
authors = ["Vincent Pfister <vincent.pfister@raisepartner.com>"]
readme = "README.md"
packages = [{include = "leet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
color = "always"
docstring_style = "google"
doctests = true
ignore = ["DAR103", "E203", "E501", "W503"]
max_line_length = 88
max_complexity = 10
strictness = "short"

# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
color_output = true
line_length = 88
profile = "black"
src_paths = ["src"]

# https://mypy.readthedocs.io/en/latest/config_file.html
[tool.mypy]
junit_xml = "reports/mypy.xml"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
ignore_missing_imports = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "--color=yes --strict-config --strict-markers"
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["src"]
xfail_strict = true
